// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ComboboxInput /> create combobox input 1`] = `
<div
  className="fd-combobox-input"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-combobox-control"
          onClick={[Function]}
        >
          <div
            className="fd-input-group fd-input-group--after"
          >
            <input
              className="fd-input"
              placeholder="Select Fruit"
              type="text"
            />
            <span
              className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button"
            >
              <button
                className=" fd-button--light sap-icon--navigation-down-arrow"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ComboboxInput /> create combobox input 2`] = `
<div
  className="fd-combobox-input blue"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-combobox-control"
          onClick={[Function]}
        >
          <div
            className="fd-input-group fd-input-group--after fd-input-group--compact"
          >
            <input
              className="fd-input fd-input--compact"
              placeholder="Select Fruit"
              type="text"
            />
            <span
              className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button"
            >
              <button
                className=" fd-button--light sap-icon--navigation-down-arrow"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
